# resumind

./: .gitignore  Dockerfile.web  README.md  docker-compose.override.yml  docker-compose.yaml  envrc.example  package.json  pnpm-lock.yaml  pytest.ini  turbo.json
.github/workflows/: lint.yml  run-migrations.yml
apps/backend/: .dockerignore  Dockerfile  Dockerfile.celery  package.json  pyproject.toml
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 1770154c0901_updated_job_application_table_to_have_.py  21897c6061c7_added_events_table.py  43cef04e082e_add_initial_resume_and_timestamps_to_.py  4b8144bd3605_added_cover_letter_to_job_aplications_.py  75c11c42fa6a_initial_migration.py  a86803cf5195_added_job_applications_table_and_linked_.py  b2c9f4d1e3a7_add_resume_strategy_brief_to_job_.py  e1f3857869ab_update_job_application_status_to_be_.py  ffb148d0ad41_add_password_field_to_user.py
apps/backend/src/: __init__.py  celery_app.py  main.py
apps/backend/src/auth/: __init__.py  constants.py  dependencies.py  jwt_handler.py  router.py  service.py  types.py
apps/backend/src/configs/: __init__.py  database_config.py
apps/backend/src/core/: constants.py  rate_limit_handlers.py  service_registry.py  types.py
apps/backend/src/integrations/: langfuse.py
apps/backend/src/job_applications/: dependencies.py  generate_resume_job.py  model.py  router.py  tools.py  types.py
apps/backend/src/job_applications/agents/: main_graph.py
apps/backend/src/job_applications/agents/company_profiler_agents/: company_discovery_agent.py  company_profiler.py  research_executor_agent.py
apps/backend/src/job_applications/agents/drafts_generators/: cover_letter_generator.py  resume_generator.py
apps/backend/src/job_applications/prompts/: company_profiler.py  cover_letter_generator.py  resume_generator.py
apps/backend/src/job_applications/repositories/: events_repository.py  job_application_repository.py
apps/backend/src/job_applications/services/: events_service.py  job_application_service.py
apps/backend/src/tests/: __init__.py  test_company_profiler.py
apps/backend/src/tests/job_applications/: __init__.py  test_company_profiler.py  test_job_application_service.py  test_tools.py
apps/backend/src/user/: dependencies.py  model.py  repository.py  router.py  service.py
apps/backend/src/user/prompts/: extract_resume_content_prompt.py
apps/web/: .dockerignore  Dockerfile  auth.config.ts  design-system.json  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(protected-components)/: layout.tsx
apps/web/app/dashboard/: layout.tsx  page.tsx
apps/web/app/onboarding/: page.tsx
apps/web/components/application/: activity-sidebar.tsx  animated-events.tsx  common.tsx  header.tsx  index.tsx  phase-sidebar.tsx
apps/web/components/auth/: error.tsx  google-auth-button.tsx  login.tsx  protected-component.tsx  signup.tsx
apps/web/components/dashboard/: base-resume-card.tsx  create-resume-card.tsx  custom-resumes-section.tsx  header.tsx  index.tsx  loading-skeleton.tsx  progress-card.tsx  quick-actions.tsx  view-resume-dialog.tsx  view-reume-dialog.tsx  welcome-section.tsx
apps/web/components/home/: contact.tsx  features.tsx  hero.tsx  pricing.tsx  testimonials.tsx
apps/web/components/landing/: cta-footer.tsx  faq.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  how-it-works.tsx  integrations.tsx  limitations.tsx  outcomes.tsx  problem-value.tsx
apps/web/lib/: auth.ts  routes.ts  swr.ts  utils.ts
apps/web/schema/: edit-cover-letter.schema.ts  resume.schema.ts  start-generation.schema.ts
apps/web/store/: job-application-store.ts
apps/web/types/: application.types.ts  resume.types.ts  user.types.ts
(+84 files in other folders)
