[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.12",
    "fastapi>=0.115.8",
    "fastapi-sessions>=0.3.2",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "requests>=2.31.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
    "passlib>=1.7.4",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.6",
    "bcrypt>=4.0.1",
    "email-validator>=2.0.0",
    "pyjwt>=2.10.1",
    "alembic>=1.15.1",
    "alembic-postgresql-enum>=1.7.0",
    "pyclean>=3.1.0",
    "langchain-google-genai>=2.1.5",
    "pdfplumber>=0.11.7",
    "python-docx>=1.2.0",
    "langchain-together>=0.3.0",
    "langchain-community>=0.3.26",
    "pydantic>=2.10.6",
    "langgraph>=0.5.4",
    "langfuse>=3.2.1",
    "pytest-dotenv>=0.5.2",
    "langchain-tavily>=0.2.11",
    "firecrawl-py>=2.16.3",
    "langchain-mistralai>=0.2.11",
    "celery>=5.5.3",
    "langgraph-checkpoint-postgres>=2.0.23",
    "asgiref>=3.9.1",
    "flower>=2.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
env_files = [".env.test"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.10",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
lint = "ruff check src/"
lint-fix = "ruff check --fix src/"
format = "ruff format src/"
format-check = "ruff format --check src/"
typecheck = "mypy src/"
check = "task lint && task typecheck && task format-check"

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
case-sensitive = true

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true
plugins = [
  "pydantic.mypy",
]

ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
